// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot, negative range 1`] = `
"-4 (c = 33.33333333333333)
..-1 (c = 0)
..-2 (c = 11.11111111111111)
....-1 (c = 0)
..-3 (c = 22.22222222222222)
....-1 (c = 0)
....-2 (c = 11.11111111111111)
......-1 (c = 0)"
`;

exports[`snapshot, positive range 1`] = `
"3 (c = 22.22222222222222)
..1 (c = 0)
..2 (c = 11.11111111111111)
....1 (c = 0)"
`;

exports[`snapshot: 0 1`] = `
"2 (c = 20)
..0 (c = 0)
..1 (c = 10)
....0 (c = 0)"
`;

exports[`snapshot: 1 1`] = `
"1 (c = 10)
..0 (c = 0)"
`;

exports[`snapshot: 2 1`] = `"0 (c = 0)"`;

exports[`snapshot: 3 1`] = `
"4 (c = 40)
..0 (c = 0)
..2 (c = 20)
....0 (c = 0)
....1 (c = 10)
......0 (c = 0)
..3 (c = 30)
....0 (c = 0)
....1 (c = 10)
......0 (c = 0)
....2 (c = 20)
......0 (c = 0)
......1 (c = 10)
........0 (c = 0)"
`;

exports[`snapshot: 4 1`] = `
"4 (c = 40)
..0 (c = 0)
..2 (c = 20)
....0 (c = 0)
....1 (c = 10)
......0 (c = 0)
..3 (c = 30)
....0 (c = 0)
....1 (c = 10)
......0 (c = 0)
....2 (c = 20)
......0 (c = 0)
......1 (c = 10)
........0 (c = 0)"
`;

exports[`snapshot: 5 1`] = `
"5 (c = 50)
..0 (c = 0)
..2 (c = 20)
....0 (c = 0)
....1 (c = 10)
......0 (c = 0)
..3 (c = 30)
....0 (c = 0)
....1 (c = 10)
......0 (c = 0)
....2 (c = 20)
......0 (c = 0)
......1 (c = 10)
........0 (c = 0)
..4 (c = 40)
....0 (c = 0)
....2 (c = 20)
......0 (c = 0)
......1 (c = 10)
........0 (c = 0)
....3 (c = 30)
......0 (c = 0)
......1 (c = 10)
........0 (c = 0)
......2 (c = 20)
........0 (c = 0)
........1 (c = 10)
..........0 (c = 0)"
`;

exports[`snapshot: 6 1`] = `
"2 (c = 20)
..0 (c = 0)
..1 (c = 10)
....0 (c = 0)"
`;

exports[`snapshot: 7 1`] = `
"3 (c = 30)
..0 (c = 0)
..1 (c = 10)
....0 (c = 0)
..2 (c = 20)
....0 (c = 0)
....1 (c = 10)
......0 (c = 0)"
`;

exports[`snapshot: 8 1`] = `
"3 (c = 30)
..0 (c = 0)
..1 (c = 10)
....0 (c = 0)
..2 (c = 20)
....0 (c = 0)
....1 (c = 10)
......0 (c = 0)"
`;

exports[`snapshot: 9 1`] = `
"4 (c = 40)
..0 (c = 0)
..2 (c = 20)
....0 (c = 0)
....1 (c = 10)
......0 (c = 0)
..3 (c = 30)
....0 (c = 0)
....1 (c = 10)
......0 (c = 0)
....2 (c = 20)
......0 (c = 0)
......1 (c = 10)
........0 (c = 0)"
`;

exports[`snapshot: 10 1`] = `
"5 (c = 50)
..0 (c = 0)
..2 (c = 20)
....0 (c = 0)
....1 (c = 10)
......0 (c = 0)
..3 (c = 30)
....0 (c = 0)
....1 (c = 10)
......0 (c = 0)
....2 (c = 20)
......0 (c = 0)
......1 (c = 10)
........0 (c = 0)
..4 (c = 40)
....0 (c = 0)
....2 (c = 20)
......0 (c = 0)
......1 (c = 10)
........0 (c = 0)
....3 (c = 30)
......0 (c = 0)
......1 (c = 10)
........0 (c = 0)
......2 (c = 20)
........0 (c = 0)
........1 (c = 10)
..........0 (c = 0)"
`;
